[gd_scene load_steps=15 format=3 uid="uid://uppfr5glg0qf"]

[ext_resource type="Script" path="res://game_sofa/sofa_game.gd" id="1_6cs1u"]
[ext_resource type="PackedScene" uid="uid://bpa1aakkr0shm" path="res://common/common.tscn" id="2_pgvyi"]
[ext_resource type="PackedScene" uid="uid://dgjybaqr7v1fv" path="res://game_sofa/slider.tscn" id="3_8r1t7"]
[ext_resource type="Texture2D" uid="uid://chlb85bovg1e7" path="res://game_sofa/sofa.png" id="4_jrudq"]
[ext_resource type="Texture2D" uid="uid://b5isi8hxsgtyv" path="res://game_sofa/cat_jump.png" id="5_v2fvb"]
[ext_resource type="Texture2D" uid="uid://c5ql724ujls8h" path="res://game_sofa/cat_sit.png" id="6_4bgto"]
[ext_resource type="Texture2D" uid="uid://bbayv21uh5h5t" path="res://game_sofa/background.png" id="7_67krr"]
[ext_resource type="Texture2D" uid="uid://bwuye5fkse8rn" path="res://game_sofa/cat_sit_2.png" id="7_w2sbv"]
[ext_resource type="Texture2D" uid="uid://bgjnw25lt5gjx" path="res://game_sofa/text_funny.png" id="9_wypsm"]
[ext_resource type="Texture2D" uid="uid://co3ru5khr34un" path="res://game_sofa/text_not_funny.png" id="10_sdtcr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_25qgs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_v2fvb")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_4bgto")
}, {
"duration": 1.0,
"texture": ExtResource("7_w2sbv")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x5jvj"]
radius = 60.4003
height = 212.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tekth"]
radius = 60.4003
height = 322.544

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rbeuj"]
distance = -851.0

[node name="SofaGame" type="Node2D"]
script = ExtResource("1_6cs1u")

[node name="Common" parent="." instance=ExtResource("2_pgvyi")]
show_chat = false
metadata/_edit_lock_ = true

[node name="Slider" parent="." instance=ExtResource("3_8r1t7")]
position = Vector2(764, 953)

[node name="Couch" type="StaticBody2D" parent="."]
position = Vector2(1017, 730)

[node name="Sprite2D" type="Sprite2D" parent="Couch"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_jrudq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Couch"]
position = Vector2(-2, 56)
polygon = PackedVector2Array(-322.5, -120, -363.5, -139, -413.5, -129, -407.5, 126, 417.5, 128, 414.5, -127, 369.5, -138, 313.5, -129, 305.5, -3, -312.5, -10)

[node name="Cat" type="RigidBody2D" parent="."]
position = Vector2(394, 813)
input_pickable = true
max_contacts_reported = 2
contact_monitor = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Cat"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_25qgs")
animation = &"sit"
autoplay = "sit"
frame_progress = 0.176051

[node name="CollisionShape2DSit" type="CollisionShape2D" parent="Cat"]
position = Vector2(-1, 41)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x5jvj")

[node name="CollisionShape2DJump" type="CollisionShape2D" parent="Cat"]
position = Vector2(33, -3)
rotation = 1.33169
shape = SubResource("CapsuleShape2D_tekth")
disabled = true

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(547, 63)
shape = SubResource("WorldBoundaryShape2D_rbeuj")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(758.5, 582.5)
scale = Vector2(0.586052, 0.547059)
texture = ExtResource("7_67krr")

[node name="Funny" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(793, 413)
rotation = 0.23911
scale = Vector2(0.879672, 0.879672)
texture = ExtResource("9_wypsm")

[node name="NotFunny" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(1095, 467)
rotation = 0.23911
scale = Vector2(0.714862, 0.714862)
texture = ExtResource("10_sdtcr")

[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
[connection signal="body_entered" from="Cat" to="." method="_on_cat_body_entered"]
[connection signal="mouse_entered" from="Cat" to="." method="_on_cat_mouse_entered"]
[connection signal="mouse_exited" from="Cat" to="." method="_on_cat_mouse_exited"]
